# cdr-rs

./: .editorconfig  .travis.yml  Cargo.toml  README.md  aliases.js  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml  coverage.yml
benches/: bench.rs
cdr/: all.html  enum.BigEndian.html  enum.CdrBe.html  enum.CdrLe.html  enum.Error.html  enum.LittleEndian.html  enum.PlCdrBe.html  enum.PlCdrLe.html  fn.calc_serialized_size.html  fn.calc_serialized_size_bounded.html  fn.deserialize.html  fn.deserialize_from.html  fn.serialize.html  fn.serialize_into.html  index.html  sidebar-items.js  struct.Bounded.html  struct.Deserializer.html  struct.Infinite.html  struct.Serializer.html  trait.Encapsulation.html  trait.SizeLimit.html  type.Result.html
cdr/de/: fn.deserialize_data.html  fn.deserialize_data_from.html  index.html  sidebar-items.js  struct.Deserializer.html
cdr/encapsulation/: enum.CdrBe.html  enum.CdrLe.html  enum.PlCdrBe.html  enum.PlCdrLe.html  trait.Encapsulation.html
cdr/error/: enum.Error.html  type.Result.html
cdr/ser/: fn.serialize_data.html  fn.serialize_data_into.html  index.html  sidebar-items.js  struct.Serializer.html
cdr/size/: fn.calc_serialized_data_size.html  fn.calc_serialized_data_size_bounded.html  index.html  sidebar-items.js  struct.Bounded.html  struct.Infinite.html  trait.SizeLimit.html
implementors/cdr/: trait.SizeLimit.js
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/hash/: trait.Hash.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/serde/de/: trait.Deserializer.js  trait.EnumAccess.js  trait.Error.js  trait.VariantAccess.js
src/: de.rs  encapsulation.rs  error.rs  lib.rs  ser.rs  size.rs
src/cdr/: de.rs.html  encapsulation.rs.html  error.rs.html  lib.rs.html  ser.rs.html  size.rs.html
tests/: test.rs
(+5 files in other folders)
