[package]
name = "cdr"
version = "0.2.4"
authors = ["Katsutoshi Horie <mps299792458@gmail.com>"]
description = """
A serialization/deserialization implementation of Common Data Representation
"""
documentation = "https://docs.rs/cdr"
homepage = "https://github.com/hrektts/cdr-rs"
repository = "https://github.com/hrektts/cdr-rs"
readme = "README.md"
keywords = ["encode", "decode", "serialize", "deserialize"]
categories = ["encoding", "network-programming"]
license = "MIT/Apache-2.0"
edition = "2018"
rust-version = "1.56.1"

[dependencies]
byteorder = "1.4.3"
serde = "1.0.164"
thiserror = "1.0.40"

[dev-dependencies]
bincode = "1.3.3"
serde_derive = "1.0.164"
